Expand runtime and tooling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ strip = true
 [profile.dev]
 opt-level = 1            # Faster builds but less optimized
 debug = true             # Keep symbols for simulator debugging
+
+[workspace]
+members = ["core", "platform"]
+resolver = "2"
