--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,4 +11,4 @@ jobs:
     - run: cargo build --workspace --verbose
     - run: cargo fmt --all -- --check
     - run: cargo clippy --workspace -- -D warnings
-    - run: cargo test --workspace --verbose
+    - run: cargo test --workspace --target x86_64-unknown-linux-gnu --verbose
