--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,18 @@
+[package]
+name = "rlvgl"
+version = "0.1.0"
+authors = ["Ira Abbott <ira@softobotos.com>"]
+edition = "2024"
+license = "BSD-1-Clause"
+description = "A modular, idiomatic Rust reimplementation of the LVGL graphics library for embedded and simulator use."
+readme = "README.md"
+repository = "https://github.com/softoboros/rlvgl"
+homepage = "https://github.com/softoboros/rlvgl"
+documentation = "https://docs.rs/rlvgl"
+keywords = ["embedded", "graphics", "ui", "lvgl", "no_std"]
+categories = ["embedded", "gui", "no-std", "graphics"]
+publish = true
+
 [profile.release]
 opt-level = "z"
 lto = true
