--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,7 +1,17 @@
 [package]
 name = "rlvgl-core"
 version = "0.1.0"
-edition = "2021"
+authors = ["Ira Abbott <ira@softobotos.com>"]
+edition = "2024"
+license = "MIT"
+description = "A modular, idiomatic Rust reimplementation of the LVGL graphics library for embedded and simulator use."
+readme = "README.md"
+repository = "https://github.com/softoboros/rlvgl"
+homepage = "https://github.com/softoboros/rlvgl"
+documentation = "https://docs.rs/rlvgl"
+keywords = ["embedded", "graphics", "ui", "lvgl", "no_std"]
+categories = ["embedded", "gui", "no-std", "graphics"]
+publish = true
 
 [dependencies]
 
