--- a/widgets/Cargo.toml
+++ b/widgets/Cargo.toml
@@ -1,10 +1,21 @@
 [package]
 name = "rlvgl-widgets"
 version = "0.1.0"
-edition = "2021"
+authors = ["Ira Abbott <ira@softobotos.com>"]
+edition = "2024"
+license = "MIT"
+description = "A modular, idiomatic Rust reimplementation of the LVGL graphics library for embedded and simulator use."
+readme = "README.md"
+repository = "https://github.com/softoboros/rlvgl"
+homepage = "https://github.com/softoboros/rlvgl"
+documentation = "https://docs.rs/rlvgl"
+keywords = ["embedded", "graphics", "ui", "lvgl", "no_std"]
+categories = ["embedded", "gui", "no-std", "graphics"]
+publish = true
+
 
 [dependencies]
-rlvgl-core = { path = "../core" }
+rlvgl-core = { version = "0.1.0", path = "../core", default-features = false }
 
 [dev-dependencies]
 platform = { path = "../platform" }
