--- a/widgets/Cargo.toml
+++ b/widgets/Cargo.toml
@@ -17,5 +17,5 @@ publish = true
 rlvgl-core = { version = "0.1.0", path = "../core", default-features = false }
 
 [dev-dependencies]
-platform = { version = "0.1.0", path = "../platform" }
+rlvgl-platform = { path = "../platform" }
 rand = "0.8"
