--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,14 @@ documentation = "https://docs.rs/rlvgl"
 keywords = ["embedded", "graphics", "ui", "lvgl", "no_std"]
 categories = ["embedded", "gui", "no-std", "graphics"]
 publish = true
+exclude = [
+  "lvgl/**",
+  "docs/**",
+  "examples/**",
+  ".github/**",
+  "scripts/**",
+  "target/**"
+]
 
 [lib]
 path = "src/lib.rs"
