--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ st7789 = ["rlvgl-platform/st7789"]
 fontdue = ["rlvgl-core/fontdue", "dep:fontdue"]
 lottie = ["rlvgl-core/lottie", "dep:dotlottie-rs"]
 canvas = ["rlvgl-core/canvas", "dep:embedded-canvas", "dep:embedded-graphics"]
+pinyin = ["rlvgl-core/pinyin"]
 
 [profile.release]
 opt-level = "z"
