--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -33,6 +33,7 @@ qrcode = ["dep:qrcode"]
 fontdue = ["dep:fontdue"]
 lottie = ["dep:dotlottie-rs"]
 canvas = ["dep:embedded-canvas", "dep:embedded-graphics"]
+pinyin = []
 
 [dev-dependencies]
 rlvgl-widgets = { path = "../widgets" }
