--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,10 +30,10 @@ rlvgl-widgets = { version = "0.1.1", path = "widgets", default-features = false 
 rlvgl-platform = { version = "0.1.0", path = "platform", default-features = false }
 
 [dependencies.gif]
-version = "*"
+version = "0.13.3"
 optional = true
 [dependencies.fontdue]
-version = "*"
+version = "0.9.3"
 optional = true
 [dependencies.dotlottie-rs]
 version = "0.1.0-alpha.1"
