--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ optional = true
 version = "0.8"
 optional = true
 [dependencies.pinyin]
-version = "*"
+version = "0.10.0"
 optional = true
 [dependencies.fatfs]
 version = "0.3"
