--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,9 +44,6 @@ optional = true
 [dependencies.embedded-graphics]
 version = "0.8"
 optional = true
-[dependencies.pinyin]
-version = "0.10.0"
-optional = true
 [dependencies.fatfs]
 version = "0.3"
 optional = true
@@ -69,7 +66,7 @@ st7789 = ["rlvgl-platform/st7789"]
 fontdue = ["rlvgl-core/fontdue", "dep:fontdue"]
 lottie = ["rlvgl-core/lottie", "dep:dotlottie-rs"]
 canvas = ["rlvgl-core/canvas", "dep:embedded-canvas", "dep:embedded-graphics"]
-pinyin = ["rlvgl-core/pinyin", "dep:pinyin"]
+pinyin = ["rlvgl-core/pinyin"]
 fatfs = ["rlvgl-core/fatfs", "dep:fatfs", "dep:fscommon"]
 nes = ["rlvgl-core/nes", "dep:yane"]
 
