Add file headers per agent policy (#25)
## Summary
- document required header comment in `AGENTS.md`
- add file header comments for all Rust sources, examples and tests

## Testing
- `cargo fmt --all -- --check`
- `cargo check`


------
https://chatgpt.com/codex/tasks/task_e_688ac047da4c8333887cad5a160416b6

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,15 +25,15 @@ exclude = [
 path = "src/lib.rs"
 
 [dependencies]
-rlvgl-core = { version = "0.1.0", path = "core", default-features = false }
+rlvgl-core = { version = "0.1.1", path = "core", default-features = false }
 rlvgl-widgets = { version = "0.1.1", path = "widgets", default-features = false }
 rlvgl-platform = { version = "0.1.0", path = "platform", default-features = false }
 
 [dependencies.gif]
-version = "*"
+version = "0.13.3"
 optional = true
 [dependencies.fontdue]
-version = "*"
+version = "0.9.3"
 optional = true
 [dependencies.dotlottie-rs]
 version = "0.1.0-alpha.1"
@@ -43,9 +43,6 @@ version = "0.3.1"
 optional = true
 [dependencies.embedded-graphics]
 version = "0.8"
-optional = true
-[dependencies.pinyin]
-version = "*"
 optional = true
 [dependencies.fatfs]
 version = "0.3"
@@ -69,7 +66,7 @@ st7789 = ["rlvgl-platform/st7789"]
 fontdue = ["rlvgl-core/fontdue", "dep:fontdue"]
 lottie = ["rlvgl-core/lottie", "dep:dotlottie-rs"]
 canvas = ["rlvgl-core/canvas", "dep:embedded-canvas", "dep:embedded-graphics"]
-pinyin = ["rlvgl-core/pinyin", "dep:pinyin"]
+pinyin = ["rlvgl-core/pinyin"]
 fatfs = ["rlvgl-core/fatfs", "dep:fatfs", "dep:fscommon"]
 nes = ["rlvgl-core/nes", "dep:yane"]
 
