--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -44,3 +44,11 @@ nes = ["dep:yane"]
 rlvgl-widgets = { path = "../widgets" }
 doc-comment = "0.3"
 base64 = "0.22"
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
+
+[lints.rust]
+unexpected_cfgs = { level = "allow", check-cfg = ["cfg(nightly)"] }
+
