update to docs and add python requirements with conan.

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -47,7 +47,7 @@ base64 = "0.22"
 
 [package.metadata.docs.rs]
 all-features = true
-rustdoc-args = ["--cfg", "docsrs"]
+rustdoc-args = ["--cfg", "docsrs", "--cfg", "nightly"]
 
 [lints.rust]
 unexpected_cfgs = { level = "allow", check-cfg = ["cfg(nightly)"] }
