--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -20,7 +20,7 @@ jpeg-decoder = { version = "0.3", optional = true }
 qrcode = { version = "0.14", default-features = false, optional = true }
 gif = { version = "0.13", optional = true }
 fontdue = { version = "0.8", default-features = false, optional = true }
-dotlottie-rs = { version = "0.1.0-alpha.1", optional = true }
+rlottie = { version = "0.5.2", optional = true }
 embedded-canvas = { version = "0.3.1", default-features = true, optional = true }
 embedded-graphics = { version = "0.8", optional = true }
 fatfs = { version = "0.3", optional = true }
@@ -35,7 +35,7 @@ jpeg = ["dep:jpeg-decoder"]
 gif = ["dep:gif"]
 qrcode = ["dep:qrcode"]
 fontdue = ["dep:fontdue"]
-lottie = ["dep:dotlottie-rs"]
+lottie = ["dep:rlottie"]
 canvas = ["dep:embedded-canvas", "dep:embedded-graphics"]
 pinyin = []
 fatfs = ["dep:fatfs", "dep:fscommon"]
