--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rlvgl"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["Ira Abbott <ira@softobotos.com>"]
 edition = "2024"
 license = "MIT"
@@ -35,8 +35,8 @@ optional = true
 [dependencies.fontdue]
 version = "0.9.3"
 optional = true
-[dependencies.dotlottie-rs]
-version = "0.1.0-alpha.1"
+[dependencies.rlottie]
+version = "0.5.2"
 optional = true
 [dependencies.embedded-canvas]
 version = "0.3.1"
@@ -54,6 +54,11 @@ optional = true
 version = "1"
 default-features = false
 optional = true
+[dependencies.image]
+version = "0.25"
+default-features = false
+features = ["png"]
+optional = true
 
 [features]
 default = []
@@ -64,11 +69,12 @@ qrcode = ["rlvgl-core/qrcode"]
 simulator = ["rlvgl-platform/simulator"]
 st7789 = ["rlvgl-platform/st7789"]
 fontdue = ["rlvgl-core/fontdue", "dep:fontdue"]
-lottie = ["rlvgl-core/lottie", "dep:dotlottie-rs"]
+lottie = ["rlvgl-core/lottie", "dep:rlottie"]
 canvas = ["rlvgl-core/canvas", "dep:embedded-canvas", "dep:embedded-graphics"]
 pinyin = ["rlvgl-core/pinyin"]
 fatfs = ["rlvgl-core/fatfs", "dep:fatfs", "dep:fscommon"]
 nes = ["rlvgl-core/nes", "dep:yane"]
+apng = ["rlvgl-core/apng", "dep:image"]
 
 [profile.release]
 opt-level = "z"
