--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,6 @@ path = "src/lib.rs"
 rlvgl-core = { version = "0.1.4", path = "core", default-features = false }
 rlvgl-widgets = { version = "0.1.1", path = "widgets", default-features = false }
 rlvgl-platform = { version = "0.1.2", path = "platform", default-features = false }
-rlvgl-sim = { version = "0.1.0", path="examples/sim", default-features = false }
 
 [dependencies.gif]
 version = "0.13.3"
@@ -93,3 +92,6 @@ debug = true
 members = ["core", "examples/sim", "platform", "widgets"]
 resolver = "2"
 
+#[[bin]]
+#name = "rlvgl-sim"
+#path = "examples/sim/main.rs"
