--- a/platform/Cargo.toml
+++ b/platform/Cargo.toml
@@ -26,3 +26,6 @@ default = []
 simulator = ["pixels", "winit"]
 st7789 = ["embedded-hal", "display-interface", "display-interface-spi"]
 
+[[bin]]
+name = "rlvgl-sim"
+path = "examples/sim/main.rs"
