--- a/platform/Cargo.toml
+++ b/platform/Cargo.toml
@@ -20,8 +20,9 @@ display-interface = { version = "0.5", optional = true }
 display-interface-spi = { version = "0.5", optional = true }
 pixels = { version = "0.15", optional = true }
 winit = { version = "0.29", optional = true }
+rfd = { version = "0.13", optional = true }
 
 [features]
 default = []
-simulator = ["pixels", "winit"]
+simulator = ["pixels", "winit", "rfd"]
 st7789 = ["embedded-hal", "display-interface", "display-interface-spi"]
