--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rlvgl"
-version = "0.1.4"
+version = "0.1.5"
 authors = ["Ira Abbott <ira@softobotos.com>"]
 edition = "2024"
 license = "MIT"
@@ -25,9 +25,9 @@ exclude = [
 path = "src/lib.rs"
 
 [dependencies]
-rlvgl-core = { version = "0.1.3", path = "core", default-features = false }
-rlvgl-widgets = { version = "0.1.1", path = "widgets", default-features = false }
-rlvgl-platform = { version = "0.1.0", path = "platform", default-features = false }
+rlvgl-core = { version = "0.1.4", path = "core", default-features = false }
+rlvgl-widgets = { version = "0.1.3", path = "widgets", default-features = false }
+rlvgl-platform = { version = "0.1.2", path = "platform", default-features = false }
 
 [dependencies.gif]
 version = "0.13.3"
@@ -89,6 +89,7 @@ opt-level = 1
 debug = true
 
 [workspace]
-members = ["core", "platform", "widgets"]
+members = ["core", "examples/sim", "platform", "widgets"]
 resolver = "2"
 
+# Only build the simulator example when the `simulator` feature is enabled.
