--- a/platform/Cargo.toml
+++ b/platform/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rlvgl-platform"
-version = "0.1.1"
+version = "0.1.3"
 authors = ["Ira Abbott <ira@softobotos.com>"]
 edition = "2024"
 license = "MIT"
@@ -18,12 +18,11 @@ rlvgl-core = { version = "0.1.0", path = "../core", default-features = false }
 embedded-hal = { version = "1.0", optional = true }
 display-interface = { version = "0.5", optional = true }
 display-interface-spi = { version = "0.5", optional = true }
+pixels = { version = "0.15", optional = true }
+winit = { version = "0.29", optional = true }
+rfd = { version = "0.13", optional = true }
 
 [features]
 default = []
-simulator = ["minifb"]
+simulator = ["pixels", "winit", "rfd"]
 st7789 = ["embedded-hal", "display-interface", "display-interface-spi"]
-
-[dependencies.minifb]
-version = "0.24"
-optional = true
