--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ path = "src/lib.rs"
 rlvgl-core = { version = "0.1.4", path = "core", default-features = false }
 rlvgl-widgets = { version = "0.1.3", path = "widgets", default-features = false }
 rlvgl-platform = { version = "0.1.3", path = "platform", default-features = false }
+rlvgl-ui = { version = "0.1.0", path = "ui", default-features = false }
 
 [dependencies.gif]
 version = "0.13.3"
@@ -89,7 +90,7 @@ opt-level = 1
 debug = true
 
 [workspace]
-members = ["core", "examples/sim", "platform", "widgets"]
+members = ["core", "examples/sim", "platform", "widgets", "ui"]
 resolver = "2"
 
 # Only build the simulator example when the `simulator` feature is enabled.
