--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -1,11 +1,11 @@
-# SPDX-License-Identifier: MIT OR Apache-2.0
+# SPDX-License-Identifier: MIT
 # rlvgl-ui crate manifest.
 
 [package]
 name = "rlvgl-ui"
 version = "0.1.0"
 edition = "2024"
-license = "MIT OR Apache-2.0"
+license = "MIT"
 description = "High-level UI components and theming for rlvgl."
 
 [dependencies]
@@ -14,5 +14,3 @@ rlvgl-widgets = { path = "../widgets", version = "0.1.3" }
 
 [features]
 view = []
-
-[workspace]
