- render fonts from bottom and treat descnders. - Update README and crate one for sim.

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -19,7 +19,7 @@ png = { version = "0.18.0-rc.3", optional = true }
 jpeg-decoder = { version = "0.3", optional = true }
 qrcode = { version = "0.14", default-features = false, optional = true }
 gif = { version = "0.13", optional = true }
-fontdue = { version = "0.8", default-features = false, optional = true }
+fontdue = { version = "0.9.3", default-features = false, optional = true }
 rlottie = { version = "0.5.2", optional = true }
 embedded-canvas = { version = "0.3.1", default-features = true, optional = true }
 embedded-graphics = { version = "0.8", optional = true }
@@ -27,14 +27,15 @@ fatfs = { version = "0.3", optional = true }
 fscommon = { version = "0.1", optional = true }
 yane = { version = "1", default-features = false, optional = true }
 image = { version = "0.25", default-features = false, features = ["png"], optional = true }
-
+once_cell = {version = "1.19", optional = true }
+blake3 = {version = "1.5", optional = true }
 [features]
 default = []
 png = ["dep:png"]
 jpeg = ["dep:jpeg-decoder"]
 gif = ["dep:gif"]
 qrcode = ["dep:qrcode"]
-fontdue = ["dep:fontdue"]
+fontdue = ["dep:fontdue", "dep:once_cell", "dep:blake3"]
 lottie = ["dep:rlottie"]
 canvas = ["dep:embedded-canvas", "dep:embedded-graphics"]
 pinyin = []
