--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -9,8 +9,9 @@ license = "MIT"
 description = "High-level UI components and theming for rlvgl."
 
 [dependencies]
-rlvgl-core = { path = "../core", version = "0.1.4" }
-rlvgl-widgets = { path = "../widgets", version = "0.1.3" }
+rlvgl-core = { path = "../core", version = "0.1.4", default-features = false }
+rlvgl-widgets = { path = "../widgets", version = "0.1.3", default-features = false }
 
 [features]
 view = []
+default = []
