Move pixels renderer into platform crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,7 +69,7 @@ gif = ["rlvgl-core/gif", "dep:gif"]
 qrcode = ["rlvgl-core/qrcode"]
 simulator = ["rlvgl-platform/simulator"]
 st7789 = ["rlvgl-platform/st7789"]
-fontdue = ["rlvgl-core/fontdue", "dep:fontdue"]
+fontdue = ["rlvgl-core/fontdue", "rlvgl-platform/fontdue", "dep:fontdue"]
 lottie = ["rlvgl-core/lottie", "dep:rlottie"]
 canvas = ["rlvgl-core/canvas", "dep:embedded-canvas", "dep:embedded-graphics"]
 pinyin = ["rlvgl-core/pinyin"]
