--- a/platform/Cargo.toml
+++ b/platform/Cargo.toml
@@ -21,8 +21,10 @@ display-interface-spi = { version = "0.5", optional = true }
 pixels = { version = "0.15", optional = true }
 winit = { version = "0.29", optional = true }
 rfd = { version = "0.13", optional = true }
+embedded-graphics = { version = "0.8", optional = true }
 
 [features]
 default = []
-simulator = ["pixels", "winit", "rfd"]
+simulator = ["pixels", "winit", "rfd", "embedded-graphics"]
 st7789 = ["embedded-hal", "display-interface", "display-interface-spi"]
+fontdue = ["rlvgl-core/fontdue"]
