--- a/examples/sim/Cargo.toml
+++ b/examples/sim/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 publish = false
 
 [dependencies]
-rlvgl= { path = "../..", features = ["simulator", "qrcode", "png", "fontdue"], default-features = false }
+rlvgl= { path = "../..", features = ["simulator", "qrcode", "png", "jpeg", "fontdue"], default-features = false }
 
 [features]
 default = ["fontdue"]
