--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ idna==3.10
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 patch-ng==1.18.1
+pillow==11.3.0
 python-dateutil==2.9.0.post0
 PyYAML==6.0.2
 requests==2.32.4
