--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,10 @@ exclude = [
   "docs/**",
   ".github/**",
   "scripts/**",
-  "target/**"
+  "target/**",
+  "assets/**",
+  ".vscode/**",
+  "codex/**"
 ]
 
 [lib]
