--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+# Continuous integration pipeline building, linting, testing, and cross-compiling embedded examples.
 name: CI
 on:
   pull_request:
@@ -12,11 +13,35 @@ jobs:
       # options: --user ${{ vars.RLVGL_BUILDER_USER }}
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Prepare build environment
-      run: bash scripts/setup-ci-env.sh
-    - run: cargo build --workspace --verbose
-    - run: cargo fmt --all -- --check
-    - run: cargo clippy --workspace -- -D warnings
-    - run: cargo test --workspace --target x86_64-unknown-linux-gnu --verbose
-    - run: RUSTDOCFLAGS="--cfg docsrs --cfg nightly" cargo +nightly doc --all-features --no-deps --target x86_64-unknown-linux-gnu
+      - uses: actions/checkout@v4
+      - name: Prepare build environment
+        run: bash scripts/setup-ci-env.sh
+      - run: cargo build --workspace --verbose
+      - run: cargo fmt --all -- --check
+      - run: cargo clippy --workspace -- -D warnings
+      - run: cargo test --workspace --target x86_64-unknown-linux-gnu --verbose
+      - run: RUSTDOCFLAGS="--cfg docsrs --cfg nightly" cargo +nightly doc --all-features --no-deps --target x86_64-unknown-linux-gnu
+
+  stm32h747i-disco:
+    runs-on: ubuntu-latest
+    container:
+      image: docker.io/iraa/rlvgl:latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Prepare build environment
+        run: bash scripts/setup-ci-env.sh
+      - name: Install target
+        run: rustup target add thumbv7em-none-eabihf
+      - name: Build firmware
+        run: cargo build --bin rlvgl-stm32h747i-disco --features "stm32h747i_disco,qrcode,png,jpeg,fontdue" --target thumbv7em-none-eabihf --release
+      - name: Firmware size
+        run: arm-none-eabi-size target/thumbv7em-none-eabihf/release/rlvgl-stm32h747i-disco | tee size.txt
+      - name: Upload firmware
+        uses: actions/upload-artifact@v4
+        with:
+          name: rlvgl-stm32h747i-disco
+          path: |
+            target/thumbv7em-none-eabihf/release/rlvgl-stm32h747i-disco
+            size.txt
+
