--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,11 @@ name = "rlvgl-sim"
 path = "examples/sim/src/main.rs"
 required-features = ["simulator", "qrcode", "png", "jpeg", "fontdue"]
 
+[[bin]]
+name = "rlvgl-creator"
+path = "src/bin/creator/main.rs"
+required-features = ["creator"]
+
 [dependencies]
 rlvgl-core = { version = "0.1.5", path = "core", default-features = false }
 rlvgl-widgets = { version = "0.1.4", path = "widgets", default-features = false }
@@ -68,6 +73,57 @@ default-features = false
 features = ["png"]
 optional = true
 
+[dependencies.apng]
+version = "0.3"
+optional = true
+
+[dependencies.png]
+version = "0.17"
+optional = true
+
+[dependencies.clap]
+version = "4.5.4"
+features = ["derive"]
+optional = true
+
+[dependencies.anyhow]
+version = "1"
+optional = true
+
+[dependencies.walkdir]
+version = "2"
+optional = true
+
+[dependencies.blake3]
+version = "1"
+optional = true
+
+[dependencies.serde]
+version = "1"
+features = ["derive"]
+optional = true
+
+[dependencies.serde_yaml]
+version = "0.9"
+optional = true
+
+[dependencies.tera]
+version = "1"
+optional = true
+
+[dependencies.schemars]
+version = "0.8"
+features = ["derive"]
+optional = true
+
+[dependencies.serde_json]
+version = "1"
+optional = true
+
+[dependencies.spdx]
+version = "0.11"
+optional = true
+
 [features]
 default = []
 png = ["rlvgl-core/png"]
@@ -83,6 +139,21 @@ pinyin = ["rlvgl-core/pinyin"]
 fatfs = ["rlvgl-core/fatfs", "dep:fatfs", "dep:fscommon"]
 nes = ["rlvgl-core/nes", "dep:yane"]
 apng = ["rlvgl-core/apng", "dep:image"]
+creator = [
+    "dep:clap",
+    "dep:anyhow",
+    "dep:walkdir",
+    "dep:blake3",
+    "dep:serde",
+    "dep:serde_yaml",
+    "dep:image",
+    "dep:tera",
+    "dep:apng",
+    "dep:png",
+    "dep:schemars",
+    "dep:serde_json",
+    "dep:spdx",
+]
 
 [profile.release]
 opt-level = "z"
