--- a/Cargo.toml
+++ b/Cargo.toml
@@ -124,6 +124,10 @@ optional = true
 version = "0.11"
 optional = true
 
+[dev-dependencies]
+insta = "1"
+tempfile = "3"
+
 [features]
 default = []
 png = ["rlvgl-core/png"]
@@ -153,6 +157,7 @@ creator = [
     "dep:schemars",
     "dep:serde_json",
     "dep:spdx",
+    "dep:fontdue",
 ]
 
 [profile.release]
