--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
   "rust-analyzer.check.extraArgs": [
     "--target",
     "x86_64-apple-darwin"
-  ]
+  ],
+  "cortex-debug.gdbPath": "/Users/iraabbott/Library/Application Support/stm32cube/bundles/gnu-tools-for-stm32/13.3.1+st.9/bin/arm-none-eabi-gdb"
 }
