--- a/examples/stm32h747i-disco/.cargo/config.toml
+++ b/examples/stm32h747i-disco/.cargo/config.toml
@@ -1,3 +1,8 @@
 # Cargo configuration for the STM32H747I-DISCO example.
 [build]
-target = "thumbv7em-none-eabihf"
+target = "thumbv7em-none-eabi"
+
+[profile.dev]
+debug = 2
+opt-level = 0
+
