--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,10 +82,6 @@ version = "0.7"
 features = ["critical-section-single-core"]
 optional = true
 
-[dependencies.panic-halt]
-version = "1.0.0"
-optional = true
-
 [dependencies.embedded-alloc]
 version = "=0.5.1"
 optional = true
@@ -106,7 +102,6 @@ stm32h747i_disco = [
     "rlvgl-platform/stm32h747i_disco",
     "dep:cortex-m-rt",
     "dep:cortex-m",
-    "dep:panic-halt",
     "dep:embedded-alloc",
 ]
 fontdue = ["rlvgl-core/fontdue", "rlvgl-platform/fontdue", "dep:fontdue"]
@@ -116,6 +111,9 @@ pinyin = ["rlvgl-core/pinyin"]
 fatfs = ["rlvgl-core/fatfs", "dep:fatfs", "dep:fscommon"]
 nes = ["rlvgl-core/nes", "dep:yane"]
 apng = ["rlvgl-core/apng", "dep:image"]
+
+[dev-dependencies]
+panic-halt = "1.0.0"
 
 [profile.release]
 opt-level = "z"
