--- a/platform/Cargo.toml
+++ b/platform/Cargo.toml
@@ -22,10 +22,15 @@ pixels = { version = "0.15", optional = true }
 winit = { version = "0.30.12", optional = true }
 eframe = { version = "0.27", default-features = false, features = ["glow"], optional = true }
 embedded-graphics = { version = "0.8", optional = true }
+bitflags = { version = "2", default-features = false }
+heapless = { version = "0.8", default-features = false }
+[target.'cfg(any(target_arch = "arm", target_arch = "aarch64"))'.dependencies]
+stm32h7 = { version = "0.16", optional = true, features = ["stm32h747cm7", "rt"] }
 
 [features]
 default = []
 simulator = ["pixels", "winit", "embedded-graphics", "eframe"]
 st7789 = ["embedded-hal", "display-interface", "display-interface-spi"]
 stm32h747i_disco = []
+dma2d = ["stm32h7"]
 fontdue = ["rlvgl-core/fontdue"]
