feat: add DMA2D non-blocking helpers and DISCO display scaffolding (#92)
## Summary
- add DMA2D non-blocking helpers to support interrupt-driven blits
- add memory-to-memory blend path to `Dma2dBlitter` and advertise blend
capability
- move `panic-halt` to dev-deps and gate DISCO example to resolve doc
build failure
- mark M2M blend and non-blocking milestones complete in pluggable
blitter roadmap
- scaffold `Stm32h747iDiscoDisplay` with RCC clock enablement and a
feature-gated blitter hook
- mark initial DISCO display tasks complete in pluggable blitter roadmap
- wire DISCO backlight PWM and reset GPIO through `embedded-hal` and
mark task complete
- add minimal OTM8009A init sequence and configure LTDC layer for RGB565
framebuffer
- check off DSI init and LTDC layer tasks for the DISCO display
- bring up external SDRAM via FMC and use it as the DISCO framebuffer,
checking off the SDRAM milestone

## Testing
- `cargo fmt --all -- --check`
- `cargo check -p rlvgl-platform`
- `cargo check -p rlvgl-platform --features stm32h747i_disco`
- `cargo check`
- `./scripts/pre-commit.sh`


------
https://chatgpt.com/codex/tasks/task_e_689eab27be9883338cdfda7d4894d9a2

--- a/platform/Cargo.toml
+++ b/platform/Cargo.toml
@@ -31,6 +31,6 @@ stm32h7 = { version = "0.16", optional = true, features = ["stm32h747cm7", "rt"]
 default = []
 simulator = ["pixels", "winit", "embedded-graphics", "eframe"]
 st7789 = ["embedded-hal", "display-interface", "display-interface-spi"]
-stm32h747i_disco = []
+stm32h747i_disco = ["stm32h7", "embedded-hal"]
 dma2d = ["stm32h7"]
 fontdue = ["rlvgl-core/fontdue"]
