--- a/Cargo.toml
+++ b/Cargo.toml
@@ -157,6 +157,7 @@ optional = true
 [dev-dependencies]
 insta = "1"
 tempfile = "3"
+panic-halt = "1.0.0"
 
 [features]
 default = []
@@ -199,9 +200,6 @@ creator = [
     "dep:resvg",
 ]
 
-[dev-dependencies]
-panic-halt = "1.0.0"
-
 [profile.release]
 opt-level = "z"
 lto = true
@@ -217,5 +215,5 @@ debug = true
 incremental = false
 
 [workspace]
-members = ["core", "platform", "widgets", "ui"]
+members = ["core", "platform", "widgets", "ui", "api", "micropython"]
 resolver = "2"
