--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,11 @@ name = "rlvgl-creator"
 path = "src/bin/creator/main.rs"
 required-features = ["creator"]
 
+[[bin]]
+name = "rlvgl-creator-ui"
+path = "src/bin/creator_ui/main.rs"
+required-features = ["creator_ui"]
+
 [dependencies]
 rlvgl-core = { version = "0.1.5", path = "core", default-features = false }
 rlvgl-widgets = { version = "0.1.4", path = "widgets", default-features = false }
@@ -85,6 +90,10 @@ optional = true
 [dependencies.cortex-m]
 version = "0.7"
 features = ["critical-section-single-core"]
+optional = true
+
+[target.'cfg(target_os = "none")'.dependencies.panic-halt]
+version = "1.0.0"
 optional = true
 
 [dependencies.embedded-alloc]
@@ -154,6 +163,18 @@ optional = true
 version = "0.45.1"
 optional = true
 
+[dependencies.eframe]
+version = "0.29"
+optional = true
+
+[dependencies.open]
+version = "5"
+optional = true
+
+[dependencies.notify]
+version = "6"
+optional = true
+
 [dev-dependencies]
 insta = "1"
 tempfile = "3"
@@ -197,6 +218,20 @@ creator = [
     "dep:rlottie",
     "dep:rayon",
     "dep:resvg",
+]
+creator_ui = [
+    "dep:eframe",
+    "dep:anyhow",
+    "dep:serde",
+    "dep:serde_yaml",
+    "dep:image",
+    "dep:schemars",
+    "dep:walkdir",
+    "dep:blake3",
+    "dep:apng",
+    "dep:png",
+    "dep:open",
+    "dep:notify",
 ]
 
 [dev-dependencies]
