Unify creator binaries into single rlgvl-creator (#99)
## Summary
- Add new rlgvl-creator binary that launches UI when no arguments and
CLI otherwise
- Expose CLI and UI modules for unified binary and update documentation
- Rename scripts and README references to rlgvl-creator

## Testing
- `cargo fmt --all`
- `./scripts/pre-commit.sh` *(fails: unresolved import
`rlvgl::platform::stm32h747i_disco`)*

------
https://chatgpt.com/codex/tasks/task_e_689ffe6890388333b8edb79bacab63fa

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,14 +37,9 @@ path = "examples/stm32h747i-disco/src/main.rs"
 required-features = ["stm32h747i_disco"]
 
 [[bin]]
-name = "rlvgl-creator"
-path = "src/bin/creator/main.rs"
-required-features = ["creator"]
-
-[[bin]]
-name = "rlvgl-creator-ui"
-path = "src/bin/creator_ui/main.rs"
-required-features = ["creator_ui"]
+name = "rlgvl-creator"
+path = "src/bin/rlgvl_creator/main.rs"
+required-features = ["creator", "creator_ui"]
 
 [dependencies]
 rlvgl-core = { version = "0.1.5", path = "core", default-features = false }
@@ -178,6 +173,7 @@ optional = true
 [dev-dependencies]
 insta = "1"
 tempfile = "3"
+panic-halt = "1.0.0"
 
 [features]
 default = []
