Wire chipdb env and publish matrix

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "rlvgl"
 version = "0.1.6"
 authors = ["Ira Abbott <ira@softobotos.com>"]
 edition = "2024"
-#license = "MIT"
+license = "MIT"
 description = "A modular, idiomatic Rust reimplementation of the LVGL graphics library for embedded and simulator use."
 readme = "README.md"
 repository = "https://github.com/softoboros/rlvgl"
